# wg_tool

./: README.md  pyproject.toml  requirements.txt  test.py
config/: df.conf  dfjcozdsiklxcjvmz.conf  dfs.conf  dsfjzcsidkhfxjci.conf  fg.conf  gf.conf  hsdj.conf  s.conf  sdf.conf  sdfsdf.conf  ser.conf  sf.conf  sfdazsdf.conf  test.conf  test11.conf  test12.conf  test22.conf  test55.conf  trdgfykjl.lmknjhgfd.conf
config.d/: config.yaml
src/wg_tool/: cli.py  config_gen.py  hooks.py  keys.py  logger.py  nftables.py  peer_manager.py  storage.py
src/wg_tool/commands/: firewall_cli.py  interfaces_cmds.py  policy_cmds.py  role_cmds.py  server_cmds.py  user_cmds.py
src/wg_tool/data/: wg_rbac.db
src/wg_tool/firewall/: __init__.py  gen_firewall.py  remove_firewall.py
src/wg_tool/policy/: automata.py  base.py  firewall.py  firewall_cli.py  manager.py  model.py
src/wg_tool/server/: interface_service.py  server_delete.py  server_editor.py  server_manager.py  server_selector.py
src/wg_tool/server/interface/: __init__.py  remove.py  restart.py  start.py  stop.py  utils.py
src/wg_tool/storage/: __init__.py  applied_rules.py  base.py  ip_allocations.py  policies.py  roles.py  servers.py  users.py
src/wg_tool/utili/: __init__.py  get_ip.py
src/wgtool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
