[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wgtool"
version = "0.1.0"
description = "WireGuard RBAC management CLI tool"
authors = [{name="Jeff"}]
dependencies = [
    "click>=8.0"
]

[project.scripts]
wgtool = "wg_tool.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
